# audio-scene-caption-lab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
.github/workflows/: ci.yml
configs/: default.yaml
docs/: adding_probes.md
mmprobe/: __init__.py  base.py  cli.py  color.py  counting.py  eval.py  negation.py  presence.py  runners.py  size_compare.py  spatial.py  temporal.py  text_read.py
scripts/: aggregate.py  sweep.py
tests/: test_basic.py  test_color.py  test_more.py  test_negation.py
