[metadata]
name = mm-probe-suite
version = 0.3.1
description = Probing tasks for multimodal LLMs
author = Lin Zihan
license = Apache-2.0

[options]
packages = find:
python_requires = >=3.9
install_requires =
    torch>=2.1
    transformers>=4.40
    pillow>=9.0
    numpy>=1.23
    tqdm
    pyyaml

[options.extras_require]
dev =
    pytest
    pre-commit
    ruff
